Fix register and modal z-index

--- a/css/forms.css
+++ b/css/forms.css
@@ -132,7 +132,7 @@ i.fas {
   width: 80%;
   max-width: 700px;
   box-shadow: rgba(0, 0, 0, 0.355) 0px 13px 27px -5px, rgba(0, 0, 0, 0.461)  0px 8px 16px -8px;
-  /* z-index: -2; */
+  z-index: 3;
   left: 50%;
   transform: translate(-50%, -400%);
 }
